# pexo-agent

./: .gitattributes  .gitignore  AGENTS.md  Dockerfile  LICENSE  MANIFEST.in  PEXO_AI_PRIMER.md  README.md  bootstrap.cmd  bootstrap.ps1  bootstrap.sh  check_logs.py  constraints.txt  docker-compose.yml  install.ps1  install.sh  old_direct_chat.py  pexo  pexo.bat  pexo.db-shm  pexo.db-wal  pexo.yaml  pyproject.toml  requirements-core.txt  requirements-full.txt  requirements-mcp.txt  requirements-vector.txt  requirements.txt  start.bat  start.sh  uninstall.cmd  uninstall.ps1  uninstall.sh
.github/workflows/: install-runtime-ci.yml  release-package.yml
app/: cache.py  cli.py  client_connect.py  context_metrics.py  core_agents.py  database.py  dependency_profiles.py  direct_chat.py  launcher.py  main.py  mcp_server.py  models.py  orchestration_context.py  paths.py  runtime.py  search_index.py  version.py
app/agents/: graph.py
app/dynamic_tools/: __init__.py
app/routers/: admin.py  agents.py  artifacts.py  backup.py  chat.py  evolve.py  memory.py  orchestrator.py  profile.py  runtime.py  tools.py
app/static/: cheatsheet.html  index.html
docs/: ARCHITECTURE.md
docs/benchmarks/: benchmark_rollup.json  benchmark_rollup.md  (+8 more)
release_bundle/: install.cmd  install.ps1  install.sh
scripts/: build_benchmark_rollup.py  build_release_bundle.py  run_context_compaction_benchmarks.py  run_large_context_stress_benchmark.py  run_mcp_cross_client_acceptance.py  run_operator_workflow_benchmarks.py  run_realworld_compression_recollection_benchmarks.py
tests/: test_hardening.py
